# infinityhackthon

./: .gitignore  README.md  pyproject.toml  requeriments.txt
app/: cliente_secret.json  db.sqlite3  resumo.txt
app/app/: settings.py  urls.py
app/backend/: api_google.py  models.py  rota_google.py  serializers.py  urls.py  views.py
app/backend/migrations/: 0001_initial.py  0002_remove_note_author_remove_note_title_note_user_task.py  0003_userprofile.py  0004_googlecalendartoken.py
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx
frontend/src/components/: CpfInput.jsx  Form.jsx  ProtectedRoute.jsx
frontend/src/pages/: Home.jsx  Login.jsx  NotFound.jsx  Portal.jsx  Register.jsx  dash.css  main.jsx  profilePage.jsx
